# photon.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-build.yml
examples/: example1.rs  example2.rs  example_wgpu.rs
src/: brdfs.rs  builders.rs  cameras.rs  colors.rs  geometries.rs  images.rs  lib.rs  main.rs  materials.rs  matrices.rs  noise.rs  rays.rs  sampling.rs  textures.rs  things.rs  transforms.rs  vectors.rs  worlds.rs
src/basic/: colors.rs  matrices.rs  mod.rs  rays.rs  vectors.rs
src/brdfs/: lambertian.rs  mod.rs
src/builders/: geometry.rs  mod.rs  path_traced.rs  thing.rs
src/filters/: bloom.rs  gaussian.rs  kernel1d.rs  kernel2d.rs  mod.rs
src/geometries/: mod.rs  sphere.rs  transformed.rs
src/imaging/: filter.rs  img.rs  iterator.rs  mod.rs
src/materials/: absorptive.rs  composite.rs  diffusive.rs  emissive.rs  holder.rs  mod.rs  reflective.rs  refractive.rs
src/noise/: fractal.rs  mod.rs  simple.rs
src/sampling/: circle.rs  mod.rs  sphere.rs  square.rs
src/textures/: black.rs  constant.rs  mod.rs  same.rs
src/things/: atomic.rs  composite.rs  mod.rs  transformed.rs
src/transforms/: affine.rs  linear.rs  mod.rs  translation.rs
src/viewing/: camera.rs  exposure.rs  lens.rs  mod.rs  pixel.rs  sensor.rs
src/wgpu/: app.rs  boot.rs  canvas.rs  data.rs  geometry.rs  geometry.wgsl  gpu.rs  mod.rs  primitive_assembly.rs  primitive_assembly.wgsl  tracer.rs  tracer.wgsl
src/wgpu/geometry/: mod.rs  sphere.rs  transform.rs
src/win/: app.rs  boot.rs  mod.rs
src/worlds/: envs.rs  mod.rs  path_traced.rs
(+7 files in other folders)
