[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.0"
image = "0.25.10"
rayon = "1.11.0"
proptest = "1.10.0"
# wgpu related dependencies
env_logger = "0.11.10"
log = "0.4.29"
wgpu = "28.0.0"
pollster = "0.4.0"

[dependencies.winit]
version = "0.30.13"
