[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.0"
image = "0.25.10"
rayon = "1.11.0"
proptest = "1.10.0"
# wgpu related dependencies
wgpu = "28.0.0"
winit = "0.30.13"
pollster = "0.4.0"
log = "0.4.29"
env_logger = "0.11.10"
anyhow = "1.0.102"